# KillDoctorLuckyWeb

./: .gitignore  AGENTS.md  AGENTS_RUST.md  AGENTS_WEB.md  BoardHauntedUp_rooms.jsonl  BoardJacob1B_rooms.jsonl  BoardMainWest_rooms.jsonl  KillDoctorLuckyWeb.code-workspace  README.md  SPEC1.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.preview.config.ts  tsconfig.app.json  vite.config.ts
assets/: index-2eGPjUnI.js  index-2eGPjUnI.js.map  index-62ume0gL.js  index-62ume0gL.js.map  index-BAQ9H5nb.css  index-C-Mzrh1z.js  index-C-Mzrh1z.js.map  index-C1DMnIy7.css  index-CRvri5cX.js  index-CRvri5cX.js.map  index-CSUaa45N.css  index-CjThprPU.js  index-Cp9-l77d.css  index-D9zhyXGP.js  index-D9zhyXGP.js.map  index-DNuqLGLo.css  index-DRkBUTc-.js  index-DRkBUTc-.js.map  index-DXg0Yo3Z.js  index-DXg0Yo3Z.js.map  index-DYo71Xs9.css  index-DhaPGyJp.js  index-DhaPGyJp.js.map  index-DhvqSXV4.js  index-DhvqSXV4.js.map  index-DslxDpmR.css  index-bLu17KmT.js  index-bLu17KmT.js.map  index-n2fRXyKp.js  index-n2fRXyKp.js.map  index-xf7QsswJ.css  kill_doctor_lucky_rust_bg-BB7tyclf.wasm  (+22 more)
docs/: tree-search-profiling.md
src/KdlRust/: Cargo.toml
src/KdlRust/cli/: main.rs
src/KdlRust/src/: lib.rs
src/KdlRust/src/cli/: main.rs  session.rs
src/KdlRust/src/core/: Room.rs  board.rs  common_game_state.rs  game_state.rs  mod.rs  mutable_game_state.rs  player.rs  room.rs  rule_helper.rs  simple_turn.rs  tree_search.rs  wing.rs
src/KdlRust/src/core/boards/: AltUp.json  BoardLairFull.json  LairSouth.json  Main.json
src/KdlRust/src/util/: cancellation.rs
(+96 files in other folders)
