[package]
name = "kill_doctor_lucky_rust"
version = "0.0.0"
edition = "2024"
authors = ["Jacob Egner <JacobEgner@example.com>"]
repository = "https://github.com/jmegner/KillDoctorLuckyWeb"
license = "unlicense"
description = "Core game logic, AI, and CLI for a deterministic version of Kill Doctor Lucky."

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "kdl_cli"
path = "src/cli/main.rs"

#[features]
#default = ["console_error_panic_hook"]

[dependencies]
itertools = "0.14.0"
js-sys = "0.3.83"
num = "0.4.3"
readonly = "0.2.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.132"
tsify = "0.5.6"
wasm-bindgen = "0.2.106"

[dev-dependencies]
wasm-bindgen-test = "0.3.56"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
